--- a/JS Web/JS Back-end/02. Express and Templating/Cubicle Worrshop/package.json
+++ b/JS Web/JS Back-end/02. Express and Templating/Cubicle Worrshop/package.json
@@ -10,7 +10,11 @@
         "express-handlebars": "^3.1.0",
         "uniqid": "^5.0.3"
     },
+    "scripts": {
+        "start": "node ./index.js",
+        "dev": "nodemon ./index.js"
+    },
     "devDependencies": {
-        "nodemon": "^1.19.2"
+        "nodemon": "^1.19.4"
     }
 }
