--- a/JS Web/JS Back-end/04. Session and Authentication/Cubicle Worrshop 3/package.json
+++ b/JS Web/JS Back-end/04. Session and Authentication/Cubicle Worrshop 3/package.json
@@ -5,9 +5,12 @@
     "version": "1.0.0",
     "main": "pathToMain",
     "dependencies": {
+        "bcrypt": "^5.1.0",
         "body-parser": "^1.19.0",
+        "cookie-parser": "^1.4.6",
         "express": "^4.17.1",
         "express-handlebars": "^3.1.0",
+        "jsonwebtoken": "^9.0.0",
         "mongoose": "7.1.1",
         "uniqid": "^5.0.3"
     },
