--- a/JS Web/JS Back-end/07. Exam preparation 2/Theater/package.json
+++ b/JS Web/JS Back-end/07. Exam preparation 2/Theater/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,7 @@
     "express-handlebars": "^7.0.7",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.2.1"
+    "mongoose": "^7.2.1",
+    "nodemon": "^2.0.22"
   }
 }
